# cognitivess-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
cognitivess/: __init__.py  _base_client.py  _models.py  client.py  exceptions.py  version.py
cognitivess/resources/: __init__.py  chat.py  messages.py  models.py  responses.py
tests/: test_smoke.py
