[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitivess"
version = "0.1.1"
description = "Official Python SDK for the CognitivessAI API (OpenAI- and Anthropic-compatible)."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "CognitivessAI", email = "hello@cognitivess.com" }]
keywords = ["cognitivess", "llm", "ai", "openai", "anthropic", "sdk", "cognitivess-1"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.24.0",
    'typing_extensions>=4.0.0; python_version < "3.11"',
]

[project.urls]
Homepage = "https://github.com/cognitivessai/cognitivess-python"
Documentation = "https://api.cognitivess.com/docs"

[tool.setuptools.packages.find]
include = ["cognitivess*"]